--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,4 +26,16 @@ jobs:
         - run : echo "HELLO WORLD" >> sample.txt
         - run : echo "HELLO EARTH" >> sample.txt
         - run : cat sample.txt
+  
+  test-go-install:
+    name  : TEST GO INSTALL
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/setup-go@v2
+        with:
+          go-version: '1.19'
+      - run: |
+          go install github.com/rakyll/gotest@latest
+          gotest
+      
 
