--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,5 +37,18 @@ jobs:
       - run: |
           go install github.com/rakyll/gotest@latest
           gotest
+
+  test-error:
+    name : TEST ERROR
+    runs-on: ubuntu-latest
+    steps: 
+      - run : |
+          something() {
+            echo "Something"
+            return $1
+          }
+          something 0
+          something 1
+          something 0
       
 
