--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,6 +41,6 @@ jobs:
     name  : SOMETHING
     runs-on: ubuntu-latest
     steps:
-      - run : echo ${{ github.head_ref }})
+      - run : echo "AHAHA ${{ github.head_ref }}"
       
 
