--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,10 +27,13 @@ jobs:
         - run : echo "HELLO EARTH" >> sample.txt
         - run : cat sample.txt
   
-  test-go-install:
+  run-go:
     name  : TEST GO INSTALL
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: '0'
       - uses: actions/setup-go@v2
         with:
           go-version: '1.19'
